--- a/lib/core/cardano-wallet-core.cabal
+++ b/lib/core/cardano-wallet-core.cabal
@@ -79,6 +79,7 @@ library
     , persistent-sqlite
     , persistent-template
     , process
+    , quiet
     , random
     , random-shuffle
     , retry
