Add dependency on `quickcheck-classes` library.
This library is useful for testing that class instances are law-abiding.

--- a/lib/core/cardano-wallet-core.cabal
+++ b/lib/core/cardano-wallet-core.cabal
@@ -234,6 +234,7 @@ test-suite unit
     , OddWord
     , QuickCheck
     , quickcheck-state-machine >= 0.6.0
+    , quickcheck-classes
     , random
     , retry
     , safe
