Add function `testLaws` for testing type class laws.
Add function `testLaws`, which can be used to test that a given instance
of a type class obeys the laws associated with that type class.

--- a/lib/test-utils/cardano-wallet-test-utils.cabal
+++ b/lib/test-utils/cardano-wallet-test-utils.cabal
@@ -44,6 +44,7 @@ library
     , iohk-monitoring
     , process
     , QuickCheck
+    , quickcheck-classes
     , stm
     , template-haskell
     , time
@@ -54,6 +55,7 @@ library
   exposed-modules:
       Test.Hspec.Extra
       Test.Utils.FilePath
+      Test.Utils.Laws
       Test.Utils.Paths
       Test.Utils.Roundtrip
       Test.Utils.StaticServer
