--- a/lib/core/cardano-wallet-core.cabal
+++ b/lib/core/cardano-wallet-core.cabal
@@ -65,6 +65,7 @@ library
     , http-types
     , io-sim-classes
     , iohk-monitoring
+    , lattices
     , memory
     , monad-logger
     , mtl
